scrollbar fix

--- a/Assignment_1/src/App.css
+++ b/Assignment_1/src/App.css
@@ -69,3 +69,7 @@ html {
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
 }
+
+.message-container::-webkit-scrollbar {
+  display: none;
+}
